--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -543,11 +543,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6680/6680 [01:25<00:00, 78.23it/s] \n",
+      "100%|██████████| 835/835 [00:09<00:00, 86.17it/s] \n",
+      "100%|██████████| 836/836 [00:09<00:00, 84.37it/s] \n"
+     ]
+    }
+   ],
    "source": [
     "from PIL import ImageFile                            \n",
     "ImageFile.LOAD_TRUNCATED_IMAGES = True                 \n",
@@ -574,16 +582,44 @@
     "           \n",
     "__Question 4:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  If you chose to use the hinted architecture above, describe why you think that CNN architecture should work well for the image classification task.\n",
     "\n",
-    "__Answer:__ "
+    "__Answer:__ <br> The hinted architecture was chosen to do build the CNN, initially. Since it has three convolution layers and three max pool layers, it was squeezing enough spatial information from images while being computationally less expensive. The global average pool layer reduced the number of parameters significantly, which made the model much faster. This CNN gave me an accuracy of around 2.7512%. <br><br> In order to acheive a better accuracy, the global average pooling layer was replaced with a flatten layer. The line of reasoning was that when the global layer was reducing the dimenions of the convolution layer which was its input, it was losing too much information. To avoid this, instead of reducing the dimensions of the convolution layer, the putput of the last max pool layer, the convolution layer was flattened and directly fed to the dense layer. This rose the accuracy up to 6.5789%. <br><br> Next, the training set was augmented and fed into the same model and that rose the model accuracy upto 10.2871%."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_1 (Conv2D)            (None, 224, 224, 16)      208       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 112, 112, 16)      0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 112, 112, 32)      2080      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 56, 56, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 56, 56, 64)        8256      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_4 (MaxPooling2 (None, 28, 28, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_2 (Flatten)          (None, 50176)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 133)               6673541   \n",
+      "=================================================================\n",
+      "Total params: 6,684,085.0\n",
+      "Trainable params: 6,684,085.0\n",
+      "Non-trainable params: 0.0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.layers import Conv2D, MaxPooling2D, GlobalAveragePooling2D\n",
     "from keras.layers import Dropout, Flatten, Dense\n",
@@ -592,6 +628,16 @@
     "model = Sequential()\n",
     "\n",
     "### TODO: Define your architecture.\n",
+    "model = Sequential()\n",
+    "model.add(Conv2D(filters=16, kernel_size=2, padding='same', activation='relu', \n",
+    "                        input_shape=(224, 224, 3)))\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "model.add(Conv2D(filters=32, kernel_size=2, padding='same', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "model.add(Conv2D(filters=64, kernel_size=2, padding='same', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(133, activation='softmax'))\n",
     "\n",
     "model.summary()"
    ]
@@ -605,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -627,26 +673,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "Epoch 00000: val_loss improved from inf to 4.12051, saving model to saved_models/weights.best.from_scratch.hdf5\n",
+      "152s - loss: 3.7340 - acc: 0.1588 - val_loss: 4.1205 - val_acc: 0.1006\n",
+      "Epoch 2/5\n",
+      "Epoch 00001: val_loss did not improve\n",
+      "153s - loss: 3.6879 - acc: 0.1614 - val_loss: 4.3748 - val_acc: 0.0982\n",
+      "Epoch 3/5\n",
+      "Epoch 00002: val_loss did not improve\n",
+      "157s - loss: 3.6769 - acc: 0.1635 - val_loss: 4.1863 - val_acc: 0.0922\n",
+      "Epoch 4/5\n",
+      "Epoch 00003: val_loss did not improve\n",
+      "152s - loss: 3.6686 - acc: 0.1699 - val_loss: 4.2506 - val_acc: 0.0958\n",
+      "Epoch 5/5\n",
+      "Epoch 00004: val_loss did not improve\n",
+      "151s - loss: 3.6401 - acc: 0.1666 - val_loss: 4.4110 - val_acc: 0.0922\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x12cfca3c8>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from keras.callbacks import ModelCheckpoint  \n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "# Creating and configuring augmented image generator to reduce over-fitting in the model\n",
+    "generator = ImageDataGenerator(width_shift_range=0.1,\n",
+    "                              height_shift_range=0.1,\n",
+    "                              horizontal_flip=True)\n",
+    "# Augmenting the data\n",
+    "generator.fit(train_tensors)\n",
     "\n",
     "### TODO: specify the number of epochs that you would like to use to train the model.\n",
     "\n",
-    "epochs = ...\n",
+    "epochs = 5\n",
+    "batch_size=20\n",
     "\n",
     "### Do NOT modify the code below this line.\n",
     "\n",
     "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.from_scratch.hdf5', \n",
     "                               verbose=1, save_best_only=True)\n",
     "\n",
-    "model.fit(train_tensors, train_targets, \n",
-    "          validation_data=(valid_tensors, valid_targets),\n",
-    "          epochs=epochs, batch_size=20, callbacks=[checkpointer], verbose=1)"
+    "model.fit_generator(generator.flow(train_tensors, train_targets, batch_size=batch_size),\n",
+    "                    steps_per_epoch=train_tensors.shape[0] // batch_size,\n",
+    "                    validation_data=(valid_tensors, valid_targets),\n",
+    "                    epochs=epochs, callbacks=[checkpointer], verbose=2)"
    ]
   },
   {
@@ -658,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -678,11 +764,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 10.2871%\n"
+     ]
+    }
+   ],
    "source": [
     "# get index of predicted dog breed for each image in test set\n",
     "dog_breed_predictions = [np.argmax(model.predict(np.expand_dims(tensor, axis=0))) for tensor in test_tensors]\n",
