--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -822,11 +822,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "global_average_pooling2d_1 ( (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 133)               68229     \n",
+      "=================================================================\n",
+      "Total params: 68,229.0\n",
+      "Trainable params: 68,229.0\n",
+      "Non-trainable params: 0.0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "VGG16_model = Sequential()\n",
     "VGG16_model.add(GlobalAveragePooling2D(input_shape=train_VGG16.shape[1:]))\n",
@@ -844,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -862,18 +878,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 6680 samples, validate on 835 samples\n",
+      "Epoch 1/20\n",
+      "Epoch 00000: val_loss improved from inf to 8.57777, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 8.0131 - acc: 0.4906 - val_loss: 8.5778 - val_acc: 0.4192\n",
+      "Epoch 2/20\n",
+      "Epoch 00001: val_loss improved from 8.57777 to 8.51704, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 7.9167 - acc: 0.4996 - val_loss: 8.5170 - val_acc: 0.4216\n",
+      "Epoch 3/20\n",
+      "Epoch 00002: val_loss improved from 8.51704 to 8.48779, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 7.8691 - acc: 0.5043 - val_loss: 8.4878 - val_acc: 0.4180\n",
+      "Epoch 4/20\n",
+      "Epoch 00003: val_loss improved from 8.48779 to 8.40098, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 7.7882 - acc: 0.5091 - val_loss: 8.4010 - val_acc: 0.4275\n",
+      "Epoch 5/20\n",
+      "Epoch 00004: val_loss did not improve\n",
+      "0s - loss: 7.7672 - acc: 0.5115 - val_loss: 8.4689 - val_acc: 0.4120\n",
+      "Epoch 6/20\n",
+      "Epoch 00005: val_loss improved from 8.40098 to 8.36057, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 7.7024 - acc: 0.5154 - val_loss: 8.3606 - val_acc: 0.4251\n",
+      "Epoch 7/20\n",
+      "Epoch 00006: val_loss improved from 8.36057 to 8.30793, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 7.6280 - acc: 0.5190 - val_loss: 8.3079 - val_acc: 0.4311\n",
+      "Epoch 8/20\n",
+      "Epoch 00007: val_loss did not improve\n",
+      "0s - loss: 7.5965 - acc: 0.5214 - val_loss: 8.3347 - val_acc: 0.4275\n",
+      "Epoch 9/20\n",
+      "Epoch 00008: val_loss improved from 8.30793 to 8.25933, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 7.4186 - acc: 0.5240 - val_loss: 8.2593 - val_acc: 0.4180\n",
+      "Epoch 10/20\n",
+      "Epoch 00009: val_loss improved from 8.25933 to 8.02566, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 7.2752 - acc: 0.5334 - val_loss: 8.0257 - val_acc: 0.4431\n",
+      "Epoch 11/20\n",
+      "Epoch 00010: val_loss improved from 8.02566 to 7.91458, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 7.1754 - acc: 0.5412 - val_loss: 7.9146 - val_acc: 0.4347\n",
+      "Epoch 12/20\n",
+      "Epoch 00011: val_loss improved from 7.91458 to 7.77710, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 7.0100 - acc: 0.5515 - val_loss: 7.7771 - val_acc: 0.4563\n",
+      "Epoch 13/20\n",
+      "Epoch 00012: val_loss did not improve\n",
+      "0s - loss: 6.9578 - acc: 0.5584 - val_loss: 7.8010 - val_acc: 0.4575\n",
+      "Epoch 14/20\n",
+      "Epoch 00013: val_loss improved from 7.77710 to 7.70260, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 6.9180 - acc: 0.5608 - val_loss: 7.7026 - val_acc: 0.4539\n",
+      "Epoch 15/20\n",
+      "Epoch 00014: val_loss improved from 7.70260 to 7.60621, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 6.8057 - acc: 0.5653 - val_loss: 7.6062 - val_acc: 0.4695\n",
+      "Epoch 16/20\n",
+      "Epoch 00015: val_loss improved from 7.60621 to 7.59798, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 6.7656 - acc: 0.5717 - val_loss: 7.5980 - val_acc: 0.4671\n",
+      "Epoch 17/20\n",
+      "Epoch 00016: val_loss did not improve\n",
+      "0s - loss: 6.6975 - acc: 0.5741 - val_loss: 7.6639 - val_acc: 0.4647\n",
+      "Epoch 18/20\n",
+      "Epoch 00017: val_loss improved from 7.59798 to 7.57635, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 6.6303 - acc: 0.5816 - val_loss: 7.5764 - val_acc: 0.4659\n",
+      "Epoch 19/20\n",
+      "Epoch 00018: val_loss improved from 7.57635 to 7.53989, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "0s - loss: 6.6132 - acc: 0.5843 - val_loss: 7.5399 - val_acc: 0.4743\n",
+      "Epoch 20/20\n",
+      "Epoch 00019: val_loss did not improve\n",
+      "0s - loss: 6.5986 - acc: 0.5871 - val_loss: 7.5439 - val_acc: 0.4695\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x11a3ad860>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.VGG16.hdf5', \n",
     "                               verbose=1, save_best_only=True)\n",
     "\n",
     "VGG16_model.fit(train_VGG16, train_targets, \n",
     "          validation_data=(valid_VGG16, valid_targets),\n",
-    "          epochs=20, batch_size=20, callbacks=[checkpointer], verbose=1)"
+    "          epochs=20, batch_size=20, callbacks=[checkpointer], verbose=2)"
    ]
   },
   {
@@ -885,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -905,11 +997,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 45.8134%\n"
+     ]
+    }
+   ],
    "source": [
     "# get index of predicted dog breed for each image in test set\n",
     "VGG16_predictions = [np.argmax(VGG16_model.predict(np.expand_dims(feature, axis=0))) for feature in test_VGG16]\n",
@@ -928,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
